# noisyreach

./: .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
demo/dubins_car/: decision_logic.py  dubins_car.py  scan.ipynb  trajectory.py  trajectory_class.py
demo/linear/: linear.ipynb
src/noisyreach/: __init__.py  car_agent.py  car_decision_logic.py  deviation.py  linear_sim.py  plotter_matplotlib.py  plotter_plotly.py  trajectory.py
