[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noisyreach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shengjiex98", email = "shengjiex98@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "verse",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
]

[tool.uv.sources]
verse = { git = "https://github.com/shengjiex98/verse-library", rev = "cbad767bf18a56bd4a56665a04a9f6a703d583d6" }

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "I"
]
