[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noisyreach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "shengjiex98", email = "shengjiex98@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "control",
    "verse @ git+https://github.com/shengjiex98/verse-library",
]

[project.optional-dependencies]
notebook = ["ipykernel>=6.29.5", "nbformat>=5.10.4", "pandas>=2.2.3"]

[dependency-groups]
dev = ["pre-commit>=4.1.0", "ruff>=0.9.7"]

[tool.hatch.metadata]
allow-direct-references = true

# [tool.uv.sources]
# verse = { workspace = true }

[tool.uv.workspace]
members = ["deps/*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true
